# LOBSimulator

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: experiment_plan.md  payoff_model.md  regimes.yaml
notebooks/: 01_baseline_sweep.py  02_game_theory.py
src/lob_simulator/: __init__.py  charts.py  engine.py  game_theory.py  invariants.py  metrics.py  runner.py  simulation.py  state.py  strategies.py  types.py
tests/: test_book_invariants.py  test_engine.py  test_game_theory.py  test_metrics.py  test_simulation_smoke.py  test_strategies.py
